fixed styling onfavbeach

--- a/calibffrontendGH/src/index.css
+++ b/calibffrontendGH/src/index.css
@@ -193,10 +193,10 @@ width:200px;
   display:grid;
   grid-template-rows: 10vw;
   font-size:16px !important;
-  /* height:relative;
-  width:relative; */
+  height:relative;
+  width:relative;
   margin: 10px;
-  transform: translate(30%,-90%);
+  transform: translate(30%,-365%);
   text-shadow: none;
   color: black;
 }
